fixed texts overflow + unequal pictures' sizes

--- a/wwwroot/css/account.css
+++ b/wwwroot/css/account.css
@@ -40,6 +40,7 @@
     object-fit: cover;
     position: relative;
     width: 10%;
+    height: 10%;
 }   
 
 .account-info {
@@ -47,7 +48,7 @@
     color: aliceblue;
     padding-top: 10px;
     width: 100vh;
-    height: 150px;
+    height: 20vh;
     overflow: hidden;
 }
 
@@ -96,14 +97,16 @@ body{
 .col{
     float: left;
     width: 40vw;
-    height: 40vh;
+    min-height: 40vh;
     margin: 10px;
     padding: 10px 10px;
     border-radius: 10px;
     background: linear-gradient(to bottom,
                         rgba(0, 0, 0, 0.5),
                         rgba(50, 50, 50, 0));
-
+    border-radius: 20px;
+    border: solid aliceblue;
+    border-width: 2px;
     transition: 1s;
 
     font-size: 25px;
@@ -112,7 +115,7 @@ body{
 
 /* ------------------------- POSTS LIST ------------------------- */
 .post-list{
-    display: flex;
+    display: flexbox;
     flex-direction: column;
     width: 90%;
     max-height: 300px;
@@ -122,6 +125,9 @@ body{
 .post-card {
     display: flex;
     align-items: center;
+    border-radius: 20px;
+    border: solid aliceblue;
+    border-width: 1px;
     font-size: 20px;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(50, 50, 50, 0.5));
     border-radius: 10px;
@@ -131,20 +137,19 @@ body{
     position: relative; /* Ensure positioning context for absolute elements */
 }
 .post-img {
-    height: 100%;
-    max-width: 25%;
-    max-height: 100%; /* Ensure the image does not exceed the container's height */
-    object-fit: contain;
+    float: left;
+    width:  30%;
+    height: 100px;
+    object-fit: cover;
     border-radius: 10px;
-    background-color: rgba(200, 200, 200, 0.5); /* Placeholder background color */
 }
 .post-info {
     position: absolute;
-    top: 10%;
-    left: 30%; /* Start the text 30% from the left of the container */
-    width: 45%; /* Ensure the text container takes the remaining width */
+    top: 5%;
+    left: 35%; /* Start the text 30% from the left of the container */
+    width: 40%; /* Ensure the text container takes the remaining width */
     height: 80%;
-    overflow: hidden;
+    overflow: none;
 }
 
 .post-info h2 {
